@@ -1,9 +1,11 @@
 2.0.11.dev0
  * #1165: Fix for when the systemd service directories (RuntimeDirectory and StateDirectory) each
    contain multiple paths.
+ * #1168: Fix for the "list", "info", and "delete" options in "extra_borg_options" being ignored
+   when "--archive" is omitted with Borg 1.x.
 
 2.0.10
- * #427: Expand the "borg_extra_options" option to support passing arbitrary Borg flags to every
+ * #427: Expand the "extra_borg_options" option to support passing arbitrary Borg flags to every
    Borg sub-command that borgmatic uses. As part of this, deprecate the "init" option under
    "borg_extra_options" in favor of "repo_create".
  * #942: Factor reference material out of the documentation how-to guides. This means there's now a
